--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 /*style.css*/
 h1 {
     color: #ff0000;
-    background-color: #27d2f0;
+    background-color: #000000;
     font-size: 50px;
+    text-align: center;
 }
 
 nav {
@@ -30,11 +31,17 @@ nav a:hover {
   }
   
 p {
-    color: #1a0be4;
+    color: #ffffff;
     font-size: 24px;
+    text-align: center;
 }
 
-div.col-md-6.col-xs-12 {
+div {
     padding:10px;
+    color: #ffffff;
+    text-align: center;
 }
 
+body {
+    background-color: #000000;
+}
