--- a/css/Port_style.css
+++ b/css/Port_style.css
@@ -34,13 +34,45 @@ p {
     color: #ffffff;
     font-size: 24px;
     text-align: center;
+    padding: 10px;
 }
 
 div {
-    padding:10px;
+    padding:20px;
     color: #ffffff;
+    text-align: center;
 }
 
 body {
     background-color: #000000;
+}
+
+@media screen and (min-width: 900px) {
+    p {
+        font-size: 24px;
+    }
+
+    div {
+        font-size: 24px;
+    }
+}
+
+@media screen and (max-width: 899px) {
+    p {
+        font-size: 18px;
+    }
+
+    div {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 499px) {
+    p {
+        font-size: 14px;
+    }
+
+    div {
+        font-size: 16px;
+    }
 }
