--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,10 @@ h1 {
 }
 
 p1 {
-    color: #ff0000;
+    color: #ffffff;
     background-color: #000000;
-    font-size: 50px;
-    text-align: center;
+    font-size: 20px;
+    text-align: right;
 }
 
 nav {
@@ -73,6 +73,10 @@ body {
     div {
         font-size: 16px;
     }
+
+    h1 {
+        font-size: 30px;
+    }
 }
 
 @media screen and (max-width: 499px) {
@@ -82,5 +86,9 @@ body {
 
     div {
         font-size: 16px;
+    }
+
+    h1 {
+        font-size: 25px;
     }
 }
