--- a/css/Port_style.css
+++ b/css/Port_style.css
@@ -1,4 +1,7 @@
-/*Port_style.css*/
+/*Port_style.css
+Separate stylesheet just in case anything with the portfolio needs to be different*/
+
+/* header to stand out from rest of page*/
 h1 {
     color: #ff0000;
     background-color: #000000;
@@ -6,6 +9,7 @@ h1 {
     text-align: center;
 }
 
+/*Style the navigation bar, horizontal*/
 nav {
     background-color: #ff0000;
     overflow: hidden;
@@ -30,6 +34,7 @@ nav a:hover {
     color: #000000;
   }
   
+/*basic styling for page content. Keep things consistent, somewhat minimalistic*/  
 p {
     color: #ffffff;
     font-size: 24px;
@@ -43,10 +48,12 @@ div {
     text-align: center;
 }
 
+/*pseudo-darkmode, helps colors pop and subdues background*/
 body {
     background-color: #000000;
 }
 
+/* Responsive css for text size, essentially an if-then statement */
 @media screen and (min-width: 900px) {
     p {
         font-size: 24px;
